--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fontsource-variable/jetbrains-mono": "^5.2.8",
     "@fontsource-variable/noto-sans-jp": "^5.2.9",
     "@fontsource/ibm-plex-sans-jp": "^5.2.8",
+    "@fontsource/noto-sans-jp": "^5.2.8",
     "@fontsource/roboto": "^5.2.8",
     "@iconify-json/fa6-brands": "^1.2.6",
     "@iconify-json/fa6-regular": "^1.2.4",
